--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <br>
                     <p>Click to view more</p>
              <div class="arrow-me">
-                <a href="#card-div">↓</a>
+                <a href="#2">↓</a>
             </div>
             </div>
             
@@ -130,7 +130,7 @@
         </div>
         <div class="card-div" id="card-div">
             <span></span>
-            <div class="card-container">
+            <div class="card-container" id="2">
                 <h2>React JS Project</h2>
                 <p>
                     All my projects are responsive, 
